--- a/smh-rs/Cargo.toml
+++ b/smh-rs/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "smh-rs"
 version = "1.27.2"
-edition = "2021"
-rust-version = "1.71"
+edition = "2024"
 
 [dependencies]
+anyhow = "1.0.75"
 clap = { version = "4.4.18", features = ["derive"] }
 
 serde = { version = "1.0.210", features = ["derive"] }
@@ -13,4 +13,4 @@ serde_json = "1.0.128"
 ndarray = "0.15.6"
 ndarray-npy = "0.8.1"
 
-anyhow = "1.0.75"
+rayon = "1.10.0"
